--- a/todoApi/docker-compose.yaml
+++ b/todoApi/docker-compose.yaml
@@ -6,8 +6,9 @@ services:
     environment:
       TZ: America/Sao_Paulo
       ASPNETCORE_ENVIRONMENT: Development   
-      DATABASE_CONNECTION: Server=postgresdb;Userid=postgres;Password=docker;DataBase=postgres
-      DEV_DATABASE_CONNECTION: Server=postgresdb;Userid=postgres;Password=docker;DataBase=postgres
+      DATABASE_CONNECTION: Server=postgresdb;Userid=postgres;Password=docker;DataBase=postgres;Port=5432;
+      DEV_DATABASE_CONNECTION: Server=postgresdb;Userid=postgres;Password=docker;DataBase=postgres;Port=5432;     
+
     ports:
       - 5000:80
     depends_on:
